Prevent navbar overflow

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ hr {
 }
 .container {
     margin: 0 auto;
-    max-width: 800px;
+    max-width: 807px;
 }
 
 /* Mod download menu */
